--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
 		"doctrine/doctrine-bundle" : "~1.2",
 		"sensio/distribution-bundle" : "~2.3"
 	},
+	"require-dev" : {
+		"phpunit/phpunit" : "3.7.*"
+	},
 	"autoload" : {
 		"psr-0" : {
 			"Pzs\\" : "src/"
