--- a/src/Pzs/Bundle/WCFCoreBundle/composer.json
+++ b/src/Pzs/Bundle/WCFCoreBundle/composer.json
@@ -19,7 +19,8 @@
 		"symfony/security" : "~2.4",
 		"symfony/form" : "~2.3",
 		"symfony/class-loader" : "~2.1",
-		"symfony/validator" : "~2.1"
+		"symfony/validator" : "~2.1",
+		"phpunit/phpunit" : "3.7.*"
 	},
 	"autoload" : {
 		"psr-0" : {
