--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
 		"sensio/distribution-bundle" : "~2.3"
 	},
 	"require-dev" : {
-		"phpunit/phpunit" : "3.7.*"
+		"phpunit/phpunit" : "3.7.*",
+		"squizlabs/php_codesniffer" : "1.*"
 	},
 	"autoload" : {
 		"psr-0" : {
