--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
 	},
 	"require-dev" : {
 		"phpunit/phpunit" : "3.7.*",
-		"squizlabs/php_codesniffer" : "1.*"
+		"squizlabs/php_codesniffer" : "1.*",
+		"phpmd/phpmd" : "1.4.*"
 	},
 	"autoload" : {
 		"psr-0" : {
