--- a/src/Pzs/Bundle/WCFCoreBundle/composer.json
+++ b/src/Pzs/Bundle/WCFCoreBundle/composer.json
@@ -20,7 +20,9 @@
 		"symfony/form" : "~2.3",
 		"symfony/class-loader" : "~2.1",
 		"symfony/validator" : "~2.1",
-		"phpunit/phpunit" : "3.7.*"
+		"phpunit/phpunit" : "3.7.*",
+		"squizlabs/php_codesniffer" : "1.*",
+		"phpmd/phpmd" : "1.4.*"
 	},
 	"autoload" : {
 		"psr-0" : {
