--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
 	"require-dev" : {
 		"phpunit/phpunit" : "3.7.*",
 		"squizlabs/php_codesniffer" : "1.*",
+		"pdepend/pdepend" : "1.1.0",
 		"phpmd/phpmd" : "1.4.*"
 	},
 	"autoload" : {
