--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,8 @@ script:
     - find src/ -type f -name '*.php' |xargs -I file php -l file > /dev/null
     - ls -d src/Pzs/*/* | parallel --gnu --keep-order 'echo "Running {} tests"; phpunit --exclude-group tty,benchmark {};' || exit 1
     - echo "Running tests requiring tty"; phpunit --group tty
+
+branches:
+    only:
+        - dev
+        - master
